# openapi.json
@@ -25,11 +25,15 @@
   "tags": [
     {
       "name": "auth",
-      "description": "Used for login, signup"
+      "description": "Used for login, sign up"
     },
     {
       "name": "user",
       "description": "Used for logged in functions"
+    },
+    {
+      "name": "file",
+      "description": "Used for file handling"
     }
   ],
   "paths": {
@@ -52,10 +56,7 @@
         },
         "responses": {
           "200": {
-            "description": "Login successful"
-          },
-          "403": {
-            "description": "Username or password is incorrect",
+            "description": "Success / logical error",
             "content": {
               "application/json": {
                 "schema": {
@@ -69,7 +70,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Message"
+                  "$ref": "#/components/schemas/ErrorMessage"
                 }
               }
             }
@@ -96,10 +97,7 @@
         },
         "responses": {
           "200": {
-            "description": "Login successful"
-          },
-          "403": {
-            "description": "Email already exists.",
+            "description": "Success / logical error",
             "content": {
               "application/json": {
                 "schema": {
@@ -113,7 +111,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Message"
+                  "$ref": "#/components/schemas/ErrorMessage"
                 }
               }
             }
@@ -132,8 +130,49 @@
           "200": {
             "description": "Logout successful"
           },
+          "401": {
+            "description": "Need login to fulfill request"
+          },
           "404": {
-            "description": "Error"
+            "description": "Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorMessage"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/file": {
+      "post": {
+        "tags": [
+          "file"
+        ],
+        "summary": "Upload a file",
+        "operationId": "fileUpload",
+        "requestBody": {
+          "description": "Add file using base64 with metadata as json",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UploadingFile"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "File Uploaded",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Message"
+                }
+              }
+            }
           }
         }
       }
@@ -159,6 +198,18 @@
       "Message": {
         "type": "object",
         "properties": {
+          "success": {
+            "type": "boolean",
+            "example" : "false"
+          },
+          "message": {
+            "type": "string"
+          }
+        }
+      },
+      "ErrorMessage": {
+        "type": "object",
+        "properties": {
           "message": {
             "type": "string"
           }
@@ -167,10 +218,10 @@
       "User": {
         "type": "object",
         "required": [
-          "id",
           "name",
           "email",
-          "password"
+          "password",
+          "password2"
         ],
         "properties": {
           "name": {
@@ -193,6 +244,73 @@
             "type": "string",
             "format": "password",
             "example": "12345678"
+          }
+        }
+      },
+      "File": {
+        "type": "object",
+        "required": [
+          "fileName",
+          "data",
+          "ownerId",
+          "uploadDate"
+        ],
+        "properties": {
+          "fileName": {
+            "type": "string",
+            "maximum": 255,
+            "example": "test_file.txt"
+          },
+          "size": {
+            "type": "integer",
+            "example": 1024
+          },
+          "data": {
+            "type": "string",
+            "format": "byte",
+            "maximum": 6e+6,
+            "example": "SGVsbG8gV29ybGQ="
+          },
+          "uploadDate": {
+            "type": "string",
+            "format": "date-time",
+            "example": "2017-07-21T17:32:28.000+00:00"
+          },
+          "path": {
+            "type": "string",
+            "example": "/folder/sub_folder/"
+          },
+          "ownerId": {
+            "type": "string"
+          }
+        }
+      },
+      "UploadingFile": {
+        "type": "object",
+        "required": [
+          "fileName",
+          "size",
+          "data"
+        ],
+        "properties": {
+          "fileName": {
+            "type": "string",
+            "maximum": 255,
+            "example": "test_file.txt"
+          },
+          "size": {
+            "type": "integer",
+            "example": 1024
+          },
+          "data": {
+            "type": "string",
+            "format": "byte",
+            "maximum": 6e+6,
+            "example": "SGVsbG8gV29ybGQ="
+          },
+          "path": {
+            "type": "string",
+            "example": "/folder/sub_folder/"
           }
         }
       }
