# src/model/User.js
@@ -4,33 +4,7 @@ const config = require('../config/config');
 const bcrypt = require('bcrypt');
 const SALT = 10;
 
-const userSchema = mongoose.Schema({
-  name: {
-    type: String,
-    required: true,
-    match: [/^[a-zA-Z0-9 ]{2,12}$/, 'Please enter a valid name'],
-    maxlength: 100,
-  },
-  email: {
-    type: String,
-    required: true,
-    lowercase: true,
-    match: [
-      /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/,
-      'Please fill a valid email address',
-    ],
-    trim: true,
-    maxlength: 100,
-  },
-  password: {
-    type: String,
-    required: true,
-    minlength: 8,
-  },
-  token: {
-    type: String,
-  },
-});
+const userSchema = require("../schema/UserSchema");
 
 // pre functions to hash password
 userSchema.pre('save', async function (next)  {
@@ -43,7 +17,6 @@ userSchema.pre('save', async function (next)  {
   } catch (err) {
     return next(err);
   }
-
 });
 
 // compare passwords
@@ -66,7 +39,7 @@ userSchema.statics.findByToken = async function (token) {
 
 //delete token
 userSchema.methods.deleteToken = async function () {
-  return this.update({ $unset: { token: 1 } });
+  return this.updateOne({ $unset: { token: 1 } });
 };
 
 module.exports = mongoose.model('Users', userSchema);
